Fixed section spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,9 @@ footer a{
     text-align: center;
 }
 
+section{
+    padding: 60px;
+}
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -130,22 +133,21 @@ footer a{
     margin: 0 auto;
 }
 
-.section-title {
-    font-size: 55px;
+.section-title {font-size: 55px;
     color: #024e76;
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
     display: inline-block;
     border-bottom: 3px solid;
-  }
-  
+}
+    
 .primary-border {
     border-color: #fce138;
-  }
+}
   
 .secondary-border {
     border-color: #39a6b2;
-  }
+}
 
 .steps {
     text-align: center;
